commit translated contents

--- a/docs/visual-basic/misc/bc31107.md
+++ b/docs/visual-basic/misc/bc31107.md
@@ -1,5 +1,5 @@
 ---
-title: Funzioni di accesso proprietà non possono essere dichiarati '<accessmodifier>' in una proprietà 'Default'
+title: Le funzioni di accesso alle proprietà non possono essere dichiarate '<accessmodifier>' in una proprietà 'Default'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31107
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC31107
 ms.assetid: 25657b33-df85-4535-8043-69795c987175
-ms.openlocfilehash: ae0bfc9c70c20b2d3c4148d7ebb3a13fa662fa5e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 17b2d9a6789d7bf007cd9856c48f649c80b5d792
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585508"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399332"
 ---
-# <a name="property-accessors-cannot-be-declared-accessmodifier-in-a-default-property"></a>Funzioni di accesso proprietà non possono essere dichiarati '\<modificatoreaccesso >' in una proprietà 'Default'
-Oggetto [l'istruzione Get](../../visual-basic/language-reference/statements/get-statement.md) o [istruzione Set](../../visual-basic/language-reference/statements/set-statement.md) in un valore predefinito proprietà include il `Private` (parola chiave).  
+# <a name="property-accessors-cannot-be-declared-accessmodifier-in-a-default-property"></a>Le funzioni di accesso alle proprietà non possono essere dichiarate '\<accessmodifier>' in una proprietà 'Default'
+Un' [istruzione Get](../language-reference/statements/get-statement.md) o un' [istruzione set](../language-reference/statements/set-statement.md) in una proprietà predefinita include la `Private` parola chiave.  
   
  Una proprietà predefinita non può essere `Private`e neanche possono esserlo le relative routine individuali (`Get` o `Set`).  
   
@@ -23,10 +23,10 @@ Oggetto [l'istruzione Get](../../visual-basic/language-reference/statements/get-
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Rimuovere la parola chiave `Private` dall'istruzione `Get` o `Set` oppure rimuovere `Default` dall' [Property Statement](../../visual-basic/language-reference/statements/property-statement.md).  
+- Rimuovere la parola chiave `Private` dall'istruzione `Get` o `Set` oppure rimuovere `Default` dall' [Property Statement](../language-reference/statements/property-statement.md).  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [Procedura: Dichiarare una proprietà con livelli di accesso misti](../../visual-basic/programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
-- [Procedura: Dichiarare e chiamare una proprietà predefinita in Visual Basic](../../visual-basic/programming-guide/language-features/procedures/how-to-declare-and-call-a-default-property.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
+- [Procedura: dichiarare una proprietà con livelli di accesso misti](../programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
+- [Procedura: dichiarare e chiamare una proprietà predefinita in Visual Basic](../programming-guide/language-features/procedures/how-to-declare-and-call-a-default-property.md)
