--- a/docs/visual-basic/misc/bc33037.md
+++ b/docs/visual-basic/misc/bc33037.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile copiare il valore del parametro 'ByRef' '<parametername>' ricopiato nell'argomento corrisponda perché tipo '<typename1>'non può essere convertito nel tipo'<typename2>'
+title: Non è possibile copiare il valore del parametro ' ByRef '' <parametername> ' nell'argomento corrispondente perché il tipo ' <typename1> ' non può essere convertito nel tipo ' <typename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33037
@@ -7,38 +7,38 @@ f1_keywords:
 helpviewer_keywords:
 - BC33037
 ms.assetid: 3ff137e2-e062-4e54-abf5-e902e2d18968
-ms.openlocfilehash: 94760c2a8bdde3839b11e4409184ca4bcf80ae8c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: df924804c07c686f4bb23d843d7cbd5fbc1fdba2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626587"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379692"
 ---
-# <a name="cannot-copy-the-value-of-byref-parameter-parametername-back-to-the-matching-argument-because-type-typename1-cannot-be-converted-to-type-typename2"></a>Non è possibile copiare il valore del parametro 'ByRef' '\<nomeparametro >' ricopiato nell'argomento corrisponda perché tipo '\<NomeTipo1 >' non può essere convertito nel tipo '\<in NomeTipo2 >'
+# <a name="cannot-copy-the-value-of-byref-parameter-parametername-back-to-the-matching-argument-because-type-typename1-cannot-be-converted-to-type-typename2"></a>Non è possibile copiare il valore del parametro ' ByRef '' \<parametername> ' nell'argomento corrispondente perché il tipo ' \<typename1> ' non può essere convertito nel tipo ' \<typename2> '
 Una routine è dichiarata con un tipo di parametro che non può essere riconvertito nel tipo dell'argomento chiamante.  
   
- Quando si definisce una classe o una struttura, è possibile definire uno o più operatori di conversione per convertire il tipo della classe o della struttura in altri tipi. È anche possibile definire operatori di conversione inversi per riconvertire gli altri tipi nel tipo della classe o della struttura originale. Quando si usa il tipo di classe o struttura in una chiamata di routine, Visual Basic possono usare gli operatori di conversione per convertire il tipo di argomento al tipo di parametro corrispondente.  
+ Quando si definisce una classe o una struttura, è possibile definire uno o più operatori di conversione per convertire il tipo della classe o della struttura in altri tipi. È anche possibile definire operatori di conversione inversi per riconvertire gli altri tipi nel tipo della classe o della struttura originale. Quando si usa il tipo di classe o struttura in una chiamata di procedura, Visual Basic possibile usare questi operatori di conversione per convertire il tipo di un argomento nel tipo del parametro corrispondente.  
   
- Se si passa l'argomento [ByRef](../../visual-basic/language-reference/modifiers/byref.md), Visual Basic copia a volte il valore dell'argomento in una variabile locale nella routine invece di passare un riferimento. In tal caso, quando la procedura termina, Visual Basic deve quindi copiare il valore della variabile locale nell'argomento nel codice chiamante.  
+ Se si passa l'argomento [ByRef](../language-reference/modifiers/byref.md), Visual Basic talvolta copia il valore dell'argomento in una variabile locale nella routine invece di passare un riferimento. In tal caso, quando la procedura viene restituita, Visual Basic necessario copiare nuovamente il valore della variabile locale nell'argomento nel codice chiamante.  
   
- Se un valore dell'argomento `ByRef` viene copiato nella routine e l'argomento e il parametro sono dello stesso tipo, non è necessaria alcuna conversione. Ma se i tipi sono diversi, Visual Basic deve convertire in entrambe le direzioni. Se uno dei tipi è il tipo di classe o struttura, Visual Basic è necessario convertirlo da e verso l'altro tipo. Questo significa che è necessario definire operatori di conversione in entrambe le direzioni.  
+ Se un valore dell'argomento `ByRef` viene copiato nella routine e l'argomento e il parametro sono dello stesso tipo, non è necessaria alcuna conversione. Tuttavia, se i tipi sono diversi, Visual Basic necessario eseguire la conversione in entrambe le direzioni. Se uno dei tipi è il tipo della classe o della struttura, Visual Basic necessario convertirlo in e da un altro tipo. Questo significa che è necessario definire operatori di conversione in entrambe le direzioni.  
   
  **ID errore:** BC33037  
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se possibile, usare un argomento chiamante dello stesso tipo del parametro di routine, in modo che Visual Basic non è necessario eseguire alcuna conversione.  
+- Se possibile, usare un argomento chiamante dello stesso tipo del parametro della routine, in modo che Visual Basic non debba eseguire alcuna conversione.  
   
-- Se è necessario chiamare la routine con un tipo di argomento diverso dal tipo del parametro, ma non è necessario restituire un valore nell'argomento chiamante, definire il parametro in modo che sia [ByVal](../../visual-basic/language-reference/modifiers/byval.md) invece che `ByRef`.  
+- Se è necessario chiamare la routine con un tipo di argomento diverso dal tipo del parametro, ma non è necessario restituire un valore nell'argomento chiamante, definire il parametro in modo che sia [ByVal](../language-reference/modifiers/byval.md) invece che `ByRef`.  
   
-- Se è necessario restituire un valore nell'argomento chiamante, definire l'operatore di conversione inverso in modo che Visual Basic è possibile convertire nel tipo di argomento chiamante.  
+- Se è necessario restituire un valore nell'argomento chiamante, definire l'operatore di conversione inverso in modo che Visual Basic possibile eseguire la conversione al tipo di argomento chiamante.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
-- [Passaggio di argomenti per valore e per riferimento](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Passaggio di argomenti per valore e per riferimento](../programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
