--- a/docs/visual-basic/misc/bc33109.md
+++ b/docs/visual-basic/misc/bc33109.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33109
 ms.assetid: 135def20-3535-4239-bffb-43208d1b3f63
-ms.openlocfilehash: 7c173f9616802e052ed8dcbbee9bf9b8ebc3702f
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d8b2d149b3243cc181481627c982a94fe7a0f346
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61941778"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395960"
 ---
 # <a name="nullable-modifier-cannot-be-specified-in-variable-declarations-with-as-new"></a>Non è possibile specificare un modificatore nullable in dichiarazioni di variabili con 'As New'
 Il modificatore di tipo nullable (?) è stato incluso in una dichiarazione di variabile in cui è stato specificato `As New` . L'esempio seguente genera questo errore:  
@@ -33,4 +33,4 @@ Dim num? As ExampleStructure
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di valori nullable](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [Tipi di valore Nullable](../programming-guide/language-features/data-types/nullable-value-types.md)
