--- a/docs/visual-basic/misc/bc36575.md
+++ b/docs/visual-basic/misc/bc36575.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36575
 ms.assetid: b87be29e-39f0-4830-9969-608d71137e3e
-ms.openlocfilehash: 1373af9d56a0b001c20d9a3b514b9a1aedcd3313
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4dfcecb7a8b3e183ad0d63ae1761115ef0cac516
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663658"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377795"
 ---
 # <a name="anonymous-type-member-name-must-be-preceded-by-a-period"></a>Il nome di membro di tipo anonimo deve essere preceduto da un punto
 Nell'elenco degli inizializzatori di oggetto per una dichiarazione di tipo anonimo, un nuovo nome di membro a cui è assegnato un valore deve essere preceduto da un punto. L'esempio seguente mostra una dichiarazione valida e una dichiarazione non valida:  
@@ -32,4 +32,4 @@ Dim instanceName1 = New With {.memberName = 10}
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [Tipi anonimi](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
