--- a/docs/visual-basic/misc/bc36576.md
+++ b/docs/visual-basic/misc/bc36576.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36576
 ms.assetid: 02217cc4-8972-4a6d-97a6-4ecbb7399af2
-ms.openlocfilehash: 7a46256ef3fbd8ada4a0abb000ccc704185a41c0
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: aa10a3363c1bd5aa99c9cd8e272aa1093c2838a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353384"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377730"
 ---
 # <a name="identifier-expected-preceded-with-a-period"></a>È previsto l'identificatore preceduto da un punto
 Nell'elenco di inizializzatori di una dichiarazione di tipo anonimo è stato incluso un valore da cui non è possibile dedurre il nome della proprietà, non assegnato a un nome di proprietà.  
@@ -34,6 +34,6 @@ Nell'elenco di inizializzatori di una dichiarazione di tipo anonimo è stato inc
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Inizializzatori di oggetto: tipi denominati e tipi anonimi](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
+- [Inizializzatori di oggetto: tipi denominati e tipi anonimi](../programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
 - [Tipi anonimi (Visual Basic)](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [Procedura: Dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
