--- a/docs/visual-basic/misc/bc36600.md
+++ b/docs/visual-basic/misc/bc36600.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile di intervallo <variable> è già dichiarato
+title: La variabile di intervallo <variable> è già dichiarata
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36600
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36600
 ms.assetid: d53da04d-cd36-44ec-8b23-48cd81231191
-ms.openlocfilehash: 1d31c07b245b46c3c5c9e2237965bd98ac55e167
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 0410c767ac7d21c9d24a5be996860b70c043c6a1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028525"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399020"
 ---
-# <a name="range-variable-variable-is-already-declared"></a>Variabile di intervallo \<variabile > è già dichiarato
+# <a name="range-variable-variable-is-already-declared"></a>La variabile di intervallo \<variable> è già dichiarata
 Un nome di variabile di intervallo specificato in una clausola `Select` , o la parte `Into` di una clausola `Aggregate`, `Group By`o `Group Join` , duplica il nome di una variabile di intervallo già specificata nella clausola di query.  
   
  **ID errore:** BC36600  
@@ -25,8 +25,8 @@ Un nome di variabile di intervallo specificato in una clausola `Select` , o la p
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [Clausola Aggregate](../../visual-basic/language-reference/queries/aggregate-clause.md)
-- [Clausola Select](../../visual-basic/language-reference/queries/select-clause.md)
-- [Clausola Group By](../../visual-basic/language-reference/queries/group-by-clause.md)
-- [Clausola Group Join](../../visual-basic/language-reference/queries/group-join-clause.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [Aggregate Clause](../language-reference/queries/aggregate-clause.md)
+- [Clausola SELECT](../language-reference/queries/select-clause.md)
+- [Clausola Group By](../language-reference/queries/group-by-clause.md)
+- [Clausola Group Join](../language-reference/queries/group-join-clause.md)
