--- a/docs/visual-basic/misc/bc36643.md
+++ b/docs/visual-basic/misc/bc36643.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36643
 ms.assetid: 34b6141b-6eab-4641-a3f4-53ef28c1792b
-ms.openlocfilehash: 88bd9cff4f9b8016fdc04f1afa7ef1a1c4371423
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0824bee561cfca32cdb86d248cd18431acfa3462
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604545"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398708"
 ---
 # <a name="array-modifiers-cannot-be-specified-on-lambda-expression-parameters-name-only-on-its-type"></a>Non è possibile specificare modificatori di matrici nel nome di parametro dell'espressione lambda. Specificarli nel tipo
 Gli argomenti di matrice possono essere inviati alle espressioni lambda, ma la dichiarazione di parametro deve includere il tipo di elemento.  
@@ -34,4 +34,4 @@ Dim arrayexample3 = Function(arrayPara As Integer()) arrayPara.Length > 0
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Espressioni lambda](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [Espressioni lambda](../programming-guide/language-features/procedures/lambda-expressions.md)
