--- a/docs/visual-basic/misc/bc30231.md
+++ b/docs/visual-basic/misc/bc30231.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30231
 ms.assetid: 16e6c3ea-ce89-4646-8c3f-0ef51324bc13
-ms.openlocfilehash: 0c5a3cdcd801dda0723eff0a4d5ec94c189a85bd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1478b39f7f1d7f1a2a59243cd66284bb883647f7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64639151"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380068"
 ---
 # <a name="implements-not-valid-in-modules"></a>'Implements' non valido nei moduli
 Un'istruzione o una clausola `Implements` si verifica all'interno di un modulo. I moduli non possono implementare le interfacce.  
@@ -25,5 +25,5 @@ Un'istruzione o una clausola `Implements` si verifica all'interno di un modulo. 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
