--- a/docs/visual-basic/misc/bc30465.md
+++ b/docs/visual-basic/misc/bc30465.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30465
 ms.assetid: 726365f6-d6fc-454a-a43b-afa41bfea82a
-ms.openlocfilehash: 43368ad5b4be29418fcfbcd173c022d177b6a0c0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 191744a478ebcfa9447fd9679961b66ba167b5d0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588439"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396064"
 ---
 # <a name="imports-statements-must-precede-any-declarations"></a>Le istruzioni 'Imports' devono precedere qualsiasi dichiarazione
 Un'istruzione `Imports` segue un'istruzione di dichiarazione all'interno di un file di origine.  
@@ -27,4 +27,4 @@ Un'istruzione `Imports` segue un'istruzione di dichiarazione all'interno di un f
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Imports (tipo e spazio dei nomi .NET)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [Istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md)
