--- a/docs/visual-basic/misc/bc36553.md
+++ b/docs/visual-basic/misc/bc36553.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC36553
 ms.assetid: 8ea0b90c-f155-47a9-988b-5b8009b510af
-ms.openlocfilehash: f46c5264c1c837677e10a836f6457810389b7e27
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: cfa2d03368e49786b26a86627f10e63307a9ef27
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353526"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378458"
 ---
 # <a name="optional-cannot-be-applied-to-the-first-parameter-of-an-extension-method"></a>Impossibile applicare 'Optional' al primo parametro di un metodo di estensione
 Impossibile applicare 'Optional' al primo parametro di un metodo di estensione. Il primo parametro specifica il tipo da estendere.  
   
  Il primo parametro di un metodo di estensione specifica il tipo di dati che il metodo estende. Quando viene eseguito il metodo, il primo parametro è associato all'istanza del tipo di dati che richiama il metodo. Di conseguenza, il primo parametro è obbligatorio e non può essere facoltativo.  
   
- La restrizione si applica solo al primo parametro. Altri parametri possono essere facoltativi oppure no, seguendo le stesse regole di qualsiasi altro metodo. Per altre informazioni, vedere [Parameter List](../../visual-basic/language-reference/statements/parameter-list.md).  
+ La restrizione si applica solo al primo parametro. Altri parametri possono essere facoltativi oppure no, seguendo le stesse regole di qualsiasi altro metodo. Per altre informazioni, vedere [Parameter List](../language-reference/statements/parameter-list.md).  
   
  **ID errore:** BC36553  
   
@@ -48,5 +48,5 @@ greeting.Print()
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Parametri facoltativi](../../visual-basic/programming-guide/language-features/procedures/optional-parameters.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Parametri facoltativi](../programming-guide/language-features/procedures/optional-parameters.md)
