--- a/docs/visual-basic/misc/bc36565.md
+++ b/docs/visual-basic/misc/bc36565.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36565
 ms.assetid: 7ed937fb-c5a4-4e4d-90f6-4f1c6ef4f74a
-ms.openlocfilehash: 54980ba05dd253552098422a4d64d03e6d0aa17c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ea8cdf15e1e6088b9622c1431ac63ce0b81a5953
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64666151"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378172"
 ---
 # <a name="too-many-arguments"></a>Troppi argomenti
 Il numero di argomenti forniti in una chiamata di routine supera il numero di argomenti definiti per la routine.  
@@ -25,4 +25,4 @@ Il numero di argomenti forniti in una chiamata di routine supera il numero di ar
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
